<resources>
    <string name="app_name">TECAir</string>
    <string name="username">"Usuario"</string>
    <string name="password">"Contraseña"</string>
    <string name="login">"Iniciar Sesión"</string>
    <string name="tabas">"TEC-Airlanes"</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="luggagebtn">"Solicitar maletas"</string>
    <string name="luggage">"Maleta"</string>
    <string name="infobtn">"Información"</string>
</resources>